Firefly III/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-mysql
  labels:
    app: firefly-iii
spec:
  ports:
    - port: 3306
  selector:
    app: firefly-iii
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-mysql
  labels:
    app: firefly-iii
spec:
  selector:
    matchLabels:
      app: firefly-iii
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii
        tier: mysql
    spec:
      containers:
        - image: yobasystems/alpine-mariadb:latest
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          hostPath:
            path: /opt/app/affine/
            type: DirectoryOrCreate
